Ingress/tomcat-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
 name: tomcat-deployment
 labels:
  author: krishna
  type: appserver
spec:
 replicas: 1
 selector:
  matchLabels:
   name: tomcat-appserver
 template:
  metadata:
   name: tomcat-pod
   labels:
    name: tomcat-appserver
  spec:
   containers:
    - name: mytomcat
      image: tomee
      ports:
       - containerPort: 8080
...
