Ingress/apache-service.yml
---
apiVersion: v1
kind: Service
metadata:
 name: apache-service
spec:
 type: ClusterIP
 ports:
  - name: http
    targetPort: 80
    port: 80
 selector:
   name: apache-appserver
...
