Ingress/Ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webserver-ingress
spec:
  rules:
    - host: example.elec.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
             service:
               name: tomcat-service
               port:
                 number: 80
    - host: example.apache.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
             service:
               name: apache-service
               port:
                 number: 80
    - host: example.nginx.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
             service:
               name: nginx-service
               port:
                 number: 80
...
