Ingress/webserver.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
    - host: example.books.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
               name: apache-service
               port:
                 number: 80
    - host: example.electronic.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
               name: tomcat-service
               port:
                 number: 80
    - host: example.gifts.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
               name: nginx-service
               port:
                 number: 80
